Fix address overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,7 @@ a {
     color: $header-heading-color;
 
     .project-address {
-        overflow-x: hidden;
+        overflow-x: scroll;
     }
 }
 
